--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
+    "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.8.2",
     "react-tagcloud": "^2.3.3",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.12",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
